Added BEM guidelines to styles for base and agnostic theme

--- a/app/partials/home-contact.html
+++ b/app/partials/home-contact.html
@@ -1,17 +1,24 @@
-<div id="contact" class="section">
-	<div class="titleWrapper">
+<section id="home-contact">
+	<div class="section__header">
 		<div class="container">
-			<div class="titleIcon"></div>
-			<h2 class="contactTitle">Contact us</h2>
+			<span class="section__badge"></span>
+			<h2 class="section__title">Contact us</h2>
 		</div>
 	</div>
-	<div class="container">
+	<div class="section__body container">
 		<div class="wrapper">
 			<div class="row">
 				<div class="col-sm-4">
-					<div class="textBox">
+					<div class="contact__message">
 						<h3>Leave us a message</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi veritatis repellat autem quam sapiente id eligendi provident possimus odio voluptatem.</p>
+
+						<ul class="contact__icons">
+							<li><span class="fa fa-behance"></span></li>
+							<li><span class="fa fa-twitter"></span></li>
+							<li><span class="fa fa-linkedin"></span></li>
+							<li><span class="fa fa-facebook"></span></li>
+						</ul>
 					</div>
 				</div>
 				<div class="col-sm-8">
@@ -34,4 +41,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
