--- a/app/partials/home-nav.html
+++ b/app/partials/home-nav.html
@@ -1,16 +1,16 @@
-<nav id="homeNav" class="navbar navbar-default">
-	<div class="container">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="#homeNav">fontRun</a>
+<nav id="home-nav">
+	<div class="nav__container container">
+		<div class="nav__logo">
+			<a href="#home-nav">fontRun</a>
 		</div>
 
-		<ul class="pull-right">
-			<li class="activeNav"><a href="#header">Home</a></li>
-			<li><a href="#skills">Skills</a></li>
-			<li><a href="#history">History</a></li>
-			<li><a href="#randomWords">Words</a></li>
-			<li><a href="#blogPosts">Blog</a></li>
-			<li><a href="#contact">Contact</a></li>
+		<ul class="nav__items">
+			<li class="nav__item nav__item--active"><a href="#header">Home</a></li>
+			<li class="nav__item"><a href="#skills">Skills</a></li>
+			<li class="nav__item"><a href="#history">History</a></li>
+			<li class="nav__item"><a href="#randomWords">Words</a></li>
+			<li class="nav__item"><a href="#blogPosts">Blog</a></li>
+			<li class="nav__item"><a href="#contact">Contact</a></li>
 		</ul>
 
 	</div>
