--- a/app/partials/home-prices.html
+++ b/app/partials/home-prices.html
@@ -1,19 +1,19 @@
-<div id="prices" class="section">
-	<div class="titleWrapper">
+<section id="home-prices">
+	<div class="section__header">
 		<div class="container">
-			<div class="titleIcon"></div>
-			<h2 class="pricesTitle">Our prices</h2>
+			<span class="section__badge"></span>
+			<h2 class="section__title">Our prices</h2>
 		</div>
 	</div>
 
 	<div class="container">
-		<div class="row">
-			<div class="col-sm-3">
-				<div class="pricesBox">
-					<h3 class="pricesSub">Simple <br>plan</h3>
+		<ul class="row">
+			<li class="col-sm-3">
+				<div class="prices__option">
+					<h3>Simple <br>plan</h3>
 					<h4>Your name</h4>
-					<span class="priceTag">$120</span>
-					<div class="bottomWrapper">
+					<p class="prices__tag"><span>$</span> 127</p>
+					<div class="prices__list">
 						<ul>
 							<li>First feature</li>
 							<li>Important stuff</li>
@@ -21,17 +21,17 @@
 							<li>Let's you be awesome</li>
 							<li>Infernal strategy</li>
 						</ul>
-						<button class="pricesButton">Purchase</button>
+						<span class="prices__button">Purchase</span>
 					</div>
 				</div>
-			</div>
+			</li>
 
-			<div class="col-sm-3">
-				<div class="pricesBox">
-					<h3 class="pricesSub">Complex <br>plan</h3>
+			<li class="col-sm-3">
+				<div class="prices__option">
+					<h3>Complex <br>plan</h3>
 					<h4>Your name</h4>
-					<span class="priceTag">$320</span>
-					<div class="bottomWrapper">
+					<p class="prices__tag"><span>$</span> 309</p>
+					<div class="prices__list">
 						<ul>
 							<li>First feature</li>
 							<li>Important stuff</li>
@@ -39,17 +39,17 @@
 							<li>Let's you be awesome</li>
 							<li>Infernal strategy</li>
 						</ul>
-						<button class="pricesButton">Purchase</button>
+						<span class="prices__button">Purchase</span>
 					</div>
 				</div>
-			</div>
+			</li>
 
-			<div class="col-sm-3">
-				<div class="pricesBox">
-					<h3 class="pricesSub">Expensive <br>plan</h3>
+			<li class="col-sm-3">
+				<div class="prices__option">
+					<h3>Expensive <br>plan</h3>
 					<h4>Your name</h4>
-					<span class="priceTag">$540</span>
-					<div class="bottomWrapper">
+					<p class="prices__tag"><span>$</span> 548</p>
+					<div class="prices__list">
 						<ul>
 							<li>First feature</li>
 							<li>Important stuff</li>
@@ -57,17 +57,17 @@
 							<li>Let's you be awesome</li>
 							<li>Infernal strategy</li>
 						</ul>
-						<button class="pricesButton">Purchase</button>
+						<span class="prices__button">Purchase</span>
 					</div>
 				</div>
-			</div>
+			</li>
 
-			<div class="col-sm-3">
-				<div class="pricesBox">
-					<h3 class="pricesSub">Oblivion <br>plan</h3>
+			<li class="col-sm-3">
+				<div class="prices__option">
+					<h3>Oblivion <br>plan</h3>
 					<h4>Your name</h4>
-					<span class="priceTag">$666</span>
-					<div class="bottomWrapper">
+					<p class="prices__tag"><span>$</span> 666</p>
+					<div class="prices__list">
 						<ul>
 							<li>First feature</li>
 							<li>Important stuff</li>
@@ -75,11 +75,11 @@
 							<li>Let's you be awesome</li>
 							<li>Infernal strategy</li>
 						</ul>
-						<button class="pricesButton">Purchase</button>
+						<span class="prices__button">Purchase</span>
 					</div>
 				</div>
-			</div>
+			</li>
 
-		</div>
+		</ul>
 	</div>
-</div>
+</section>
