--- a/app/partials/home-skill.html
+++ b/app/partials/home-skill.html
@@ -1,39 +1,45 @@
-<div id="skills" class="section">
-	<div class="titleWrapper">
+<section id="home-skills">
+	<div class="section__header">
 		<div class="container">
-			<div class="titleIcon"></div>
-			<h2 class="skillsTitle">Our skills</h2>
+			<span class="section__badge"></span>
+			<h2 class="section__title">Our skills</h2>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4">
-				<div class="skillBox">
-					<h3 class="skillsSub">First skill</h3>
-					<div class="bottomWrapper">
+				<div class="skills__item">
+					<h3 class="skills__item-title">First skill</h3>
+					<div class="skills__item-description">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur incidunt sapiente ipsum modi ex quod.</p>
-						<button class="skillsButton">View more</button>
+						<span class="skills__item-button">
+							<span>View more</span>
+						</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="skillBox">
-					<h3 class="skillsSub">Second skill</h3>
-					<div class="bottomWrapper">
+				<div class="skills__item">
+					<h3 class="skills__item-title">First skill</h3>
+					<div class="skills__item-description">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur incidunt sapiente ipsum modi ex quod.</p>
-						<button class="skillsButton">View more</button>
+						<span class="skills__item-button">
+							<span>View more</span>
+						</span>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
-				<div class="skillBox">
-					<h3 class="skillsSub">Third skill</h3>
-					<div class="bottomWrapper">
+				<div class="skills__item">
+					<h3 class="skills__item-title">First skill</h3>
+					<div class="skills__item-description">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur incidunt sapiente ipsum modi ex quod.</p>
-						<button class="skillsButton">View more</button>
+						<span class="skills__item-button">
+							<span>View more</span>
+						</span>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
