--- a/app/partials/side-menu.html
+++ b/app/partials/side-menu.html
@@ -27,11 +27,11 @@
 			<ul>
 				<li class="side-menu__font-select-main">
 					<h4 class="side-menu__title">MAIN FONT</h4>
-					<h2 class="side-menu__title">Akzidenz Grotesk</h2>
+					<h2 class="side-menu__title">{{ fonts.primary | fontName }}</h2>
 				</li>
 				<li class="side-menu__font-select-secondary">
 					<h4 class="side-menu__title">SECONDARY FONT</h4>
-					<h2 class="side-menu__title">Futura</h2>
+					<h2 class="side-menu__title">{{ fonts.secondary | fontName }}</h2>
 				</li>
 			</ul>
 		</div>
