--- a/app/partials/home-header.html
+++ b/app/partials/home-header.html
@@ -1,18 +1,22 @@
-<header class="contentWrapper" id="header">
-	<div class="headerOverlay"></div>
+<header class="contentWrapper" id="home-header">
+	<div class="header__overlay"></div>
 	<div class="container">
 
 		<div class="row">
 			<div class="col-md-12">
-				<div class="headerTag">
-					<div class="headerTagInner">
+				<div class="header__tag">
+					<div class="header__tag-inner">
 						<h1>Our company</h1>
 						<h3>Bringing you the best</h3>
 					</div>
 				</div>
-				<h1 class="headerTitle">This is some text</h1>
-				<p class="headerP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, libero, unde, natus, facilis neque deserunt adipisci optio officiis iste quam eum nulla nihil consequuntur aut.</p>
-				<button class="headerButton">Go for it</button>
+
+				<h1 class="header__title">This is some text</h1>
+				<p class="header__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, libero, unde, natus, facilis neque deserunt adipisci optio officiis iste quam eum nulla nihil consequuntur aut.</p>
+
+				<span class="header__button">
+					<span>Go for it</span>
+				</span>
 			</div>
 		</div>
 	</div>
