--- a/app/partials/home-words.html
+++ b/app/partials/home-words.html
@@ -1,49 +1,49 @@
-<div id="randomWords" class="section">
-	<div class="titleWrapper">
+<section id="home-words">
+	<div class="section__header">
 		<div class="container">
-			<div class="titleIcon"></div>
-			<h2 class="wordsTitle">Some random words</h2>
+			<span class="section__badge"></span>
+			<h2 class="section__title">Some random words</h2>
 		</div>
 	</div>
 	<div class="container">
 		<div class="wrapper">
 			<div class="row">
-				<div class="col-md-2 randomWordsColumn1">
+				<div class="col-md-2 words__column">
 					<h4>Phenomenon</h4>
 					<h4>Galaxy</h4>
 					<h4>Technique</h4>
 					<h4>History</h4>
 					<h4>Nomenclature</h4>
 				</div>
-				<div class="col-md-2 randomWordsColumn2">
+				<div class="col-md-2 words__column">
 					<h4>Spectrographic</h4>
 					<h4>Western</h4>
 					<h4>Dark matter</h4>
 					<h4>Evolution</h4>
 					<h4>Speakers</h4>
 				</div>
-				<div class="col-md-2 randomWordsColumn3">
+				<div class="col-md-2 words__column">
 					<h4>Classical</h4>
 					<h4>Thermonuclear</h4>
 					<h4>Random</h4>
 					<h4>Astronomy</h4>
 					<h4>Conglomerate</h4>
 				</div>
-				<div class="col-md-2 randomWordsColumn4">
+				<div class="col-md-2 words__column">
 					<h4>Purpose</h4>
 					<h4>Breakthroughs</h4>
 					<h4>Fundamental</h4>
 					<h4>Tenuous</h4>
 					<h4>Immortal</h4>
 				</div>
-				<div class="col-md-2 randomWordsColumn5">
+				<div class="col-md-2 words__column">
 					<h4>International</h4>
 					<h4>Intersects</h4>
 					<h4>Objects</h4>
 					<h4>Surrounded</h4>
 					<h4>Further</h4>
 				</div>
-				<div class="col-md-2 randomWordsColumn6">
+				<div class="col-md-2 words__column">
 					<h4>Variations</h4>
 					<h4>Dramatically</h4>
 					<h4>Mathematical</h4>
@@ -53,4 +53,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
