Minor fixes to side menu

--- a/app/partials/side-menu.html
+++ b/app/partials/side-menu.html
@@ -13,59 +13,66 @@
 
 	<nav class="fr-side-menu"
 		ng-class="{ 'side-menu--show' : showSideMenu }">
-		<span class="side-menu__close"
-			ng-click="showSideMenu = false">
-			<i class="fa fa-close"></i>
-		</span>
 
-		<div class="side-menu__brand">
+		<header>
 			<img src="fontrun-logo.png" alt="fontrun">
+
+			<span class="side-menu__close"
+				ng-click="showSideMenu = false">
+				<i class="fa fa-close"></i>
+			</span>
+		</header>
+
+		<div class="side-menu__content">
+			<div class="side-menu__font-select">
+				<h1 class="side-menu__title">Selected fonts</h1>
+				<ul>
+					<li class="side-menu__font-select-main">
+						<h4 class="side-menu__title">MAIN FONT</h4>
+						<h2 class="side-menu__title">{{ fonts.primary | fontName }}</h2>
+					</li>
+					<li class="side-menu__font-select-secondary">
+						<h4 class="side-menu__title">SECONDARY FONT</h4>
+						<h2 class="side-menu__title">{{ fonts.secondary | fontName }}</h2>
+					</li>
+				</ul>
+			</div>
+
+			<div>
+				<h1 class="side-menu__title">Color pallette</h1>
+				<ul class="side-menu__selected-colors">
+					<li>
+						<span ng-style="{ 'background-color': '#'+colors.primary }"></span>
+						<input type="text" ng-model="colors.primary">
+					</li>
+					<li>
+						<span ng-style="{ 'background-color': '#'+colors.secondary }"></span>
+						<input type="text" ng-model="colors.secondary">
+					</li>
+					<li>
+						<span ng-style="{ 'background-color': '#'+colors.tertiary }"></span>
+						<input type="text" ng-model="colors.tertiary">
+					</li>
+				</ul>
+
+				<ul class="side-menu__loaded-schemes">
+					<li>
+						<div class="side-menu__main-colors">
+							<div class="fr-color-1"></div>
+							<div class="fr-color-2"></div>
+							<div class="fr-color-3"></div>
+						</div>
+						<div class="side-menu__gray-colors">
+							<div class="fr-gray-1"></div>
+							<div class="fr-gray-2"></div>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</div>
 
-		<div class="side-menu__font-select">
-			<h1 class="side-menu__title">Selected fonts</h1>
-			<ul>
-				<li class="side-menu__font-select-main">
-					<h4 class="side-menu__title">MAIN FONT</h4>
-					<h2 class="side-menu__title">{{ fonts.primary | fontName }}</h2>
-				</li>
-				<li class="side-menu__font-select-secondary">
-					<h4 class="side-menu__title">SECONDARY FONT</h4>
-					<h2 class="side-menu__title">{{ fonts.secondary | fontName }}</h2>
-				</li>
-			</ul>
-		</div>
-
-		<div>
-			<h1 class="side-menu__title">Color pallette</h1>
-			<ul class="side-menu__selected-colors">
-				<li>
-					<span ng-style="{ 'background-color': '#'+colors.primary }"></span>
-					<input type="text" ng-model="colors.primary">
-				</li>
-				<li>
-					<span ng-style="{ 'background-color': '#'+colors.secondary }"></span>
-					<input type="text" ng-model="colors.secondary">
-				</li>
-				<li>
-					<span ng-style="{ 'background-color': '#'+colors.tertiary }"></span>
-					<input type="text" ng-model="colors.tertiary">
-				</li>
-			</ul>
-
-			<ul class="side-menu__loaded-schemes">
-				<li>
-					<div class="side-menu__main-colors">
-						<div class="fr-color-1"></div>
-						<div class="fr-color-2"></div>
-						<div class="fr-color-3"></div>
-					</div>
-					<div class="side-menu__gray-colors">
-						<div class="fr-gray-1"></div>
-						<div class="fr-gray-2"></div>
-					</div>
-				</li>
-			</ul>
-		</div>
+		<footer>
+			<span>Developed by <a href="#">Sebastian Holgado</a></span>
+		</footer>
 	</nav>
 </div>
