--- a/app/styles/app/_side-menu.scss
+++ b/app/styles/app/_side-menu.scss
@@ -72,16 +72,18 @@
 		}
 	}
 
-	.side-menu__brand {
-		padding: 50px 20px 30px;
+	header {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100px;
+		padding: 0 20px;
 	}
 
-	ul {
-		padding-left: 0;
-
-		li {
-			list-style: none;
-		}
+	.side-menu__content {
+		padding: 120px 20px 70px 20px;
+		overflow-y: auto;
 	}
 
 	.side-menu__font-select {
@@ -207,6 +209,16 @@
 			}
 		}
 	}
+
+	footer {
+		position: absolute;
+		bottom: 0;
+		left: 20px;
+		right: 20px;
+		line-height: 30px;
+		text-align: center;
+		border-top: 1px solid #FFF;
+	}
 }
 
 .fr-theme-select {
@@ -262,23 +274,9 @@
 			width: 4px;
 			background-color: transparent;
 		}
-		&::-webkit-scrollbar-button  {
 
-		}
-		&::-webkit-scrollbar-track {
-
-		}
-		&::-webkit-scrollbar-track-piece {
-
-		}
 		&::-webkit-scrollbar-thumb {
 			background-color: #FFF;
-		}
-		&::-webkit-scrollbar-corner {
-
-		}
-		&::-webkit-resizer {
-
 		}
 
 		li {
