--- a/app/styles/base/_layout.scss
+++ b/app/styles/base/_layout.scss
@@ -9,8 +9,22 @@ ul {
 a {
 	color: inherit;
 
+	&:hover,
 	&:hover {
 		color: inherit;
 		text-decoration: none;
+	}
+}
+
+h1,h2,h3,h4,h5,h6,p {
+	margin: 0;
+}
+
+input[type='text'] {
+	width: 100%;
+	border: none;
+
+	&:focus {
+		outline: none;
 	}
 }
